Fix post title alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -200,6 +200,7 @@
     font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
+    text-align: left;
 
     @include media-query($on-laptop) {
         font-size: 36px;
